--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,7 +6,7 @@
 <% if(user) { %> 
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1><%= user.name %><span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+			<h1><%= user.name %><span class="m_1"><%= user.role %></span></h1>
 		</div>
 	</div>
 	
