--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,5 +1,7 @@
-<%- include('partials/_headers') %> <%- include('partials/_navigation') %> <%
-if(user) { %> <% if(user.role === 'student') { %>
+<%- include('partials/_headers') %> 
+<%- include('partials/_navigation') %> 
+<% if(user) { %> 
+  <% if(user.role === 'student') { %>
 <div class="all-title-box">
   <div class="container text-center">
     <h1><%= user.name %><span class="m_1"><%= user.role %></span></h1>
@@ -28,7 +30,7 @@ if(user) { %> <% if(user.role === 'student') { %>
           </div>
           <div class="course-br">
             <div class="course-title">
-              <h2><a href="course-single.html" title=""><%= user.courses[i].name %></a></h2>
+              <h2><a href="/courses/<%= user.courses[i].slug %>" title=""><%= user.courses[i].name %></a></h2>
             </div>
             <div class="course-desc">
               <p>
@@ -51,7 +53,8 @@ if(user) { %> <% if(user.role === 'student') { %>
   <!-- end container -->
 </div>
 <!-- end section -->
-<% } %> <% if(user.role === 'teacher') { %>
+<% } %> 
+<% if(user.role === 'teacher') { %>
 <div class="all-title-box">
   <div class="container text-center">
     <h1><%= user.name %><span class="m_1"><%= user.role %></span></h1>
@@ -72,7 +75,7 @@ if(user) { %> <% if(user.role === 'student') { %>
                 <%= flashMessages.error %>    
             </div>
         <% } %>    
-    <% } %>
+      <% } %>
       <!-- Modal Button -->
       <div class="col-lg-12 text-center">
         <button
@@ -227,4 +230,89 @@ aria-labelledby="myModalLabel"
 </div>
 <!-- end section -->
 
-<% } %> <% } %> <%- include('partials/_footer') %>
+<% } %>
+<% if(user.role === 'admin') { %>
+  <div class="all-title-box">
+    <div class="container text-center">
+      <h1><%= user.name %><span class="m_1"><%= user.role %></span></h1>
+    </div>
+  </div>
+  
+  <div id="overviews" class="section wb">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 blog-post-single">
+          <div class="blog-author">
+            <div class="author-bio">
+              <h3 class="author_name"><a href="#">COURSES ENROLLED BY : <%= user.name %></a></h3>
+            </div>
+          </div>
+        </div>
+        <!-- end col -->
+      </div>
+      <!-- end row -->
+      <div class="row mt-5">
+        <h2>Users</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">#ID</th>
+              <th scope="col">Email</th>
+              <th scope="col">Role</th>
+              <th scope="col">DELETE</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% for (let i=0; i < users.length; i++) { %>
+            <tr>
+              <th scope="row"><%= users[i]._id %></th>
+              <td><%= users[i].email %></td>
+              <td><%= users[i].role %></td>
+              <td><a href="/users/<%= users[i]._id %>?_method=DELETE" onclick="return confirm('Are you sure ?')" class="btn btn-danger rounded-0 text-white">
+                <span>
+                  DELETE
+                </span>
+              </a></td>
+            </tr>
+            <% } %>
+          </tbody>
+        </table>
+  
+        <!-- end col -->
+      </div>
+      <div class="row mt-5">
+        <h2>Categories</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">#ID</th>
+              <th scope="col">Name</th>
+              <th scope="col">ADD</th>
+              <th scope="col">DELETE</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% for (let i=0; i < categories.length; i++) { %>
+            <tr>
+              <th scope="row"><%= categories[i]._id %></th>
+              <td><%= categories[i].name %></td>
+              <td>ADD</td>
+              <td><a href="/categories /<%= categories [i]._id %>?_method=DELETE" onclick="return confirm('Are you sure ?')" class="btn btn-danger rounded-0 text-white">
+                <span>
+                  DELETE
+                </span>
+              </a></td>
+            </tr>
+            <% } %>
+          </tbody>
+        </table>
+  
+        <!-- end col -->
+      </div>
+      <!-- end row -->
+    </div>
+    <!-- end container -->
+  </div>
+  <!-- end section -->
+  <% } %> 
+<% } %> <%- include('partials/_footer') %>
