Made category delete and add operations

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -296,8 +296,15 @@ aria-labelledby="myModalLabel"
             <tr>
               <th scope="row"><%= categories[i]._id %></th>
               <td><%= categories[i].name %></td>
-              <td>ADD</td>
-              <td><a href="/categories /<%= categories [i]._id %>?_method=DELETE" onclick="return confirm('Are you sure ?')" class="btn btn-danger rounded-0 text-white">
+              <td><button
+                class="btn btn-lg btn-warning rounded-0 text-white"
+                href="#"
+                data-toggle="modal"
+                data-target="#addCategory"
+              >
+                <span>ADD</span>
+              </button></td>
+              <td><a href="/categories/<%= categories[i]._id %>?_method=DELETE" onclick="return confirm('Are you sure ?')" class="btn btn-danger rounded-0 text-white">
                 <span>
                   DELETE
                 </span>
@@ -314,5 +321,56 @@ aria-labelledby="myModalLabel"
     <!-- end container -->
   </div>
   <!-- end section -->
+  <div
+  class="modal fade"
+  id="addCategory"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="myModalLabel"
+  >
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-body customer-box">
+        <!-- Tab panes -->
+        <div class="tab-content">
+          <div class="tab-pane active" id="Login">
+            <form method="POST" action="/categories" class="form-horizontal">
+              <div class="form-group">
+                <div class="col-sm-12">
+                  <input
+                    type="text"
+                    name="name"
+                    class="form-control"
+                    placeholder="Category Name"
+                  />
+                </div>
+              </div>
+
+              </div>
+              <div class="row">
+                <div class="col-sm-10">
+                  <button
+                    type="submit"
+                    class="btn btn-light btn-radius btn-brd grd1"
+                  >
+                    Submit
+                  </button>
+                  <button
+                    type="submit"
+                    class="btn btn-light btn-radius btn-brd grd1"
+                    data-dismiss="modal"
+                    aria-hidden="true"
+                  >
+                    Cancel
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
   <% } %> 
 <% } %> <%- include('partials/_footer') %>
