--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,10 +61,10 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="message-box">
-						<h2></h2>						
-						<p></p>
+						<h2><%= courses[0].name %></h2>						
+						<p><%= courses[0].description %></p>
 
-                        <a href="" class="hover-btn-new orange"><span>Learn More</span></a>
+                        <a href="/courses/<%= courses[0].name %>" class="hover-btn-new orange"><span>Learn More</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 				
@@ -83,9 +83,9 @@
 				
 				<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="message-box">
-                        <h2></h2>
-						<p></p>
-                        <a href="" class="hover-btn-new orange"><span>Learn More</span></a>
+                        <h2><%= courses[1].name %></h2>
+						<p><%= courses[1].description %></p>
+                        <a href="/courses/<%= courses[1].name %>" class="hover-btn-new orange"><span>Learn More</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 				
@@ -98,19 +98,19 @@
 			<div class="row text-left stat-wrap">
 				<div class="col-md-4 col-sm-4 col-xs-12">
 					<span data-scroll class="global-radius icon_wrap effect-1 alignleft"><i class="flaticon-study"></i></span>
-					<p class="stat_count"></p>
+					<p class="stat_count"><%= totalStudents %></p>
 					<h3>Students</h3>
 				</div><!-- end col -->
 
 				<div class="col-md-4 col-sm-4 col-xs-12">
 					<span data-scroll class="global-radius icon_wrap effect-1 alignleft"><i class="flaticon-online"></i></span>
-					<p class="stat_count"></p>
+					<p class="stat_count"><%= totalCourses %></p>
 					<h3>Courses</h3>
 				</div><!-- end col -->
 
 				<div class="col-md-4 col-sm-4 col-xs-12">
 					<span data-scroll class="global-radius icon_wrap effect-1 alignleft"><i class="flaticon-years"></i></span>
-					<p class="stat_count"></p>
+					<p class="stat_count"><%= totalTeachers %></p>
 					<h3>Teachers</h3>
 				</div><!-- end col -->
 			</div><!-- end row -->
